--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "flowbite-react": "^0.9.0",
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.344.0",
     "next": "14.1.1",
@@ -40,6 +41,7 @@
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.2.1",
     "react-pro-sidebar": "^1.1.0",
+    "react-scrollbars-custom": "^4.1.1",
     "react-spinners": "^0.13.8",
     "resend": "^3.2.0",
     "sonner": "^1.4.3",
