--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.5",
+    "@reduxjs/toolkit": "^2.2.5",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -33,16 +34,19 @@
     "flowbite-react": "^0.9.0",
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.344.0",
-    "next": "14.1.1",
+    "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.15",
     "next-themes": "^0.2.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.2.1",
+    "react-persist": "^1.0.2",
     "react-pro-sidebar": "^1.1.0",
+    "react-redux": "^9.1.2",
     "react-scrollbars-custom": "^4.1.1",
     "react-spinners": "^0.13.8",
+    "redux-persist": "^6.0.0",
     "resend": "^3.2.0",
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
@@ -56,10 +60,11 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/redux-persist": "^4.3.1",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.1.1",
+    "eslint-config-next": "^14.2.3",
     "postcss": "^8",
     "prisma": "^5.10.2",
     "tailwindcss": "^3.3.0",
