--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.5",
     "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -43,6 +44,7 @@
     "react-icons": "^5.2.1",
     "react-persist": "^1.0.2",
     "react-pro-sidebar": "^1.1.0",
+    "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "react-scrollbars-custom": "^4.1.1",
     "react-spinners": "^0.13.8",
