--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.4",
+    "@apollo/experimental-nextjs-app-support": "^0.11.2",
     "@auth/prisma-adapter": "^1.5.0",
     "@hookform/resolvers": "^3.3.4",
     "@lottiefiles/react-lottie-player": "^3.5.4",
@@ -34,6 +36,8 @@
     "clsx": "^2.1.0",
     "flowbite-react": "^0.9.0",
     "framer-motion": "^11.2.10",
+    "graphql": "^16.8.2",
+    "graphql-request": "^7.0.1",
     "lucide-react": "^0.344.0",
     "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.15",
