--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start":"node index.js",
-    "dev":"nodemon index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "xyvie lyons mbugua",
   "license": "ISC",
@@ -20,11 +20,15 @@
     "express": "^4.19.2",
     "express-graphql": "^0.12.0",
     "graphql": "^16.8.2",
+    "graphql-http": "^1.22.1",
+    "graphql-yoga": "^5.3.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "mongoose": "^8.4.1",
     "morgan": "^1.10.0",
+    "ruru": "^2.0.0-beta.11",
     "xss-clean": "^0.1.4"
   }
 }
