--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-redux": "^9.1.2",
     "react-scrollbars-custom": "^4.1.1",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
     "resend": "^3.2.0",
     "sonner": "^1.4.3",
